# MyFlutterNativeApp

./: .gitignore  README.md  pubspec.yaml
example/: pubspec.yaml
example/lib/: main.dart
example/windows/: CMakeLists.txt
interface/: README.md
interface/lib/: main.dart
interface/test/: widget_test.dart
interface/windows/: CMakeLists.txt
interface/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
interface/windows/runner/: Runner.rc  main.cpp
lib/: myapp.dart  mystruct.dart  practice_callback_store.dart
test/: myapp_test.dart
windows/: CMakeLists.txt  callback_store.cpp  callback_store.h  myapp_plugin.cpp  practice_mystruct.cpp  practice_native_func.cpp
windows/include/myapp/: myapp_plugin.h
